# redis-lens

./: Cargo.toml  FEATURE_LISTHASHSET.md  LICENSE  README.md  todo.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
examples/: demo.rs  demo_list.rs  generics.rs  list.rs  table.rs
src/: app.rs  args.rs  lib.rs  main.rs  redis.rs  tracing.rs  tree.rs
src/app/: actions.rs  events.rs  fetch.rs  insert.rs  mod.rs
src/redis/: datatype.rs  mock.rs  mod.rs  real.rs
src/redis/commands/: hashes.rs  keys.rs  lists.rs  mod.rs  pubsub.rs  server.rs  sets.rs  sorted_sets.rs  strings.rs
src/ui/: confirmation_modal.rs  details.rs  header.rs  help.rs  help_modal.rs  left_menu.rs  mod.rs  theme.rs
tests/: integration_tests.rs  tree_tests.rs
