[package]
name = "redis-lens"
version = "0.1.0"
edition = "2024"
authors = ["George Thekkan <georgethekkan@gmail.com>"]
description = "A high-performance, premium TUI for exploring and managing Redis and Valkey databases."
license = "MIT"
repository = "https://github.com/georgethekkan/redis-lens"
homepage = "https://github.com/georgethekkan/redis-lens"
readme = "README.md"
keywords = ["redis", "valkey", "tui", "database", "viewer"]
categories = ["command-line-utilities", "database-implementations"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
itertools = "0.14.0"
r2d2 = "0.8.10"
ratatui = "0.30.0"
redis = { version = "1.0.2", features = ["r2d2"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
